[gd_scene load_steps=9 format=3 uid="uid://br4qnop5fhuqa"]

[ext_resource type="Script" path="res://Enemies/cutebunny.gd" id="1_8v20i"]
[ext_resource type="Texture2D" uid="uid://xriroveryoj2" path="res://Enemies/rabbot.png" id="2_es4g5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a86kt"]
radius = 3.0
height = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4xfwf"]
radius = 83.0

[sub_resource type="Animation" id="Animation_11dua"]
resource_name = "Left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rabbot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_ar0ag"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rabbot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_i3rn7"]
resource_name = "Right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rabbot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jqij7"]
_data = {
"Left": SubResource("Animation_11dua"),
"RESET": SubResource("Animation_ar0ag"),
"Right": SubResource("Animation_i3rn7")
}

[node name="Bunny" type="CharacterBody2D"]
collision_layer = 16
script = ExtResource("1_8v20i")

[node name="Hitbox" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_a86kt")

[node name="Node2D" type="Node2D" parent="."]

[node name="AggroRange" type="Area2D" parent="Node2D"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/AggroRange"]
shape = SubResource("CircleShape2D_4xfwf")
debug_color = Color(0.984314, 0, 0.360784, 0.419608)

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
path_postprocessing = 1
avoidance_enabled = true

[node name="Recalculate" type="Timer" parent="Navigation"]
wait_time = 0.3
autostart = true

[node name="Rabbot" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_es4g5")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 0.7
libraries = {
"": SubResource("AnimationLibrary_jqij7")
}

[connection signal="area_entered" from="Node2D/AggroRange" to="." method="_on_aggro_range_area_entered"]
[connection signal="area_exited" from="Node2D/AggroRange" to="." method="_on_aggro_range_area_exited"]
[connection signal="velocity_computed" from="Navigation/NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="Navigation/Recalculate" to="." method="_on_recalculate_timeout"]
